--- a/index.css
+++ b/index.css
@@ -182,38 +182,6 @@ header #menu{
     cursor: pointer;
     display: none;
 }
-
-.about{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
-.about .image{
-    flex: 1 1 40rem;
-}
-
-.about .image img{
-    border-radius: 5rem;
-    height: 65vh;
-    width: 100%;
-}
-
-.about .content{
-    flex: 1 1 40rem;
-}
-
-.about .content h3{
-    font-size: 3.5rem;
-    color: #666;
-}
-
-.about .content p{
-    font-size: 1.5rem;
-    color: #666;
-    padding: 1rem 0;
-}
 /* Media querys */
 
 @media(max-width:768px){
@@ -232,7 +200,7 @@ header #menu{
         background: #444;
     }
 
-    header .navbar ul{
+    /* header .navbar ul{
         flex-flow: column;
         padding: 2rem 0;
     }
@@ -247,8 +215,7 @@ header #menu{
         font-size: 2.5rem;
         display: block;
     }
-    
-    header .navbar ul li a.active,
+     */
     header .navbar ul li a:hover{
         color: #f39c12;
     }
